# Bitsaccobot

./: .gitignore  Cargo.toml  Dockerfile  README-TYPESCRIPT.md  README.md  build.bat  build.sh  deny.toml  docker-compose.yml  env.example  index.html  package-lock.json  package.json  script.js  styles.css  test-api.html  tsconfig.json
.github/workflows/: ci-cd.yml
benches/: load_test.rs
docs/: API_INTEGRATION.md  DEPLOYMENT.md
src/: cache.rs  circuit_breaker.rs  config.rs  error.rs  lib.rs  main.rs  monitoring.rs  rate_limit.rs  script.ts  types.rs  validation.rs  webhook.rs
src/services/: bitsacco.rs  btc.rs  mod.rs  twilio.rs  voice.rs  whatsapp.rs
tests/: integration_tests.rs  voice_tests.rs
