[package]
name = "bitsacco-whatsapp-bot"
version = "0.1.0"
edition = "2021"
authors = ["BitSacco Team"]
description = "Secure WhatsApp Bot for BitSacco savings and Bitcoin services"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "tracing"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Security
ring = "0.17"
base64 = "0.21"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Rate limiting
governor = "0.6"

# Configuration
config = "0.14"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockito = "1.0"
criterion = "0.5"

[[bench]]
name = "load_test"
harness = false
