[package]
name = "bitsacco-whatsapp-bot"
version = "0.1.0"
edition = "2021"
authors = ["BitSacco Team"]
description = "Secure WhatsApp Bot for BitSacco savings and Bitcoin services"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "tracing"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Validation
regex = "1.0"

# Security
ring = "0.17"
base64 = "0.22"
hex = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Rate limiting
governor = "0.10"
dashmap = "6.0"

# Caching
moka = { version = "0.12", features = ["future"] }

# Circuit breaker - simplified implementation

# Audio processing
hound = "3.5"
# Speech-to-text and text-to-speech
# Note: For production, consider using cloud services like Azure Speech, Google Cloud Speech, or AWS Polly
# For now, we'll implement basic audio file handling and prepare for integration

# File handling
tempfile = "3.8"
tokio-util = { version = "0.7", features = ["codec"] }

# Configuration
config = "0.15"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockito = "1.0"
criterion = "0.7"

[[bench]]
name = "load_test"
harness = false
